# assistant-mcp

./: .gitmodules  Cargo.toml  Dockerfile  README.md  rustfmt.toml
src/: config.rs  lib.rs  main.rs  pinecone.rs  router.rs
