[package]
name = "assistant-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
mcp-core = { path = "rust-sdk/crates/mcp-core" }
mcp-server = { path = "rust-sdk/crates/mcp-server" }
serde_json = "1.0.139"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
thiserror = "1.0.58"
reqwest = { version = "0.11.26", features = ["json"] }
is-terminal = "0.4.12"

[dev-dependencies]
tokio-test = "0.4.4"
mockito = "1.4.0"
